Update stylefy